--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reactjs Minting Dapp</title>
+    <script type="module" crossorigin src="/assets/index.e3071d68.js"></script>
+    <link rel="stylesheet" href="/assets/index.ca9d1a90.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    
   </body>
 </html>
